# polaris-os

./: .gitmodules  README.md  run.sh
Docs/: concept_view.pptx
Notes/: audio_test.txt  fake_msg.txt  gst-cmds.txt  joy_rosbag_24_09_25.tar  test.txt
cpp_mono_streamer/cpp/: streaming_sender.cpp
cpp_stereo_streamer/cpp/src/: main.cpp
gps_reader/: package.xml  setup.py
gps_reader/gps_reader/: gps_reader.py
mavros_commutator/: CMakeLists.txt  package.xml
mavros_commutator/launch/: run.xml
mavros_commutator/src/: commutator.cpp
mavros_joystic/: CMakeLists.txt  package.xml
mavros_joystic/launch/: conn_test.xml  run.xml  run_comm.xml
mavros_joystic/src/: mavros_joystic_node.cpp
mavros_ugv_telemetry/: CMakeLists.txt  package.xml
mavros_ugv_telemetry/src/: telemetry.cpp
polaris_joystic/: CMakeLists.txt  package.xml
polaris_joystic/launch/: joystick_demo.launch.xml
polaris_joystic/src/: JoystickDemo.cpp  JoystickDemo.hpp
polaris_joystick/: CMakeLists.txt  package.xml
polaris_joystick/launch/: joystick.launch.xml
polaris_joystick/src/: JoystickDemo.cpp  JoystickDemo.hpp
scripts/: polaris.service  run.sh
