<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polaris_joystic</name>
  <version>0.0.1</version>
  <description>Package subscribes mavlink to joystic messages and commands Polaris to act</description>
  <maintainer email="andrejs.zujevs@lmt.lv">A.Zujevs</maintainer>
  <license>LMT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ds_dbw_msgs</depend>
  <depend>ds_dbw_can</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
